Add initial js bindings for Cvar set, get and Cmd exec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -684,6 +684,10 @@ set( ROCKET_CLIENTLIST
   ${MOUNT_DIR}/engine/client/rocket.cpp
 )
 
+set( DUK_CLIENTLIST
+	${MOUNT_DIR}/engine/client/cl_duk.cpp
+)
+
 set( TTYCLIENTLIST
     ${ENGINE_DIR}/null/null_input.cpp
     ${ENGINE_DIR}/null/null_renderer.cpp
@@ -1605,7 +1609,7 @@ GAMEMODULE( NAME cgame
 
 if( BUILD_CLIENT )
   add_executable( client WIN32 ${SERVERLIST} ${CLIENTBASELIST} ${CLIENTLIST} ${RENDERERLIST} ${SDLLIST} ${ENGINELIST} ${SHAREDLIST}
-    ${LIBSRC_BASE} ${LIBSRC_ENGINE} ${LIBSRC_CLIENTBASE} ${LIBSRC_CLIENT} ${WIN_RC} ${ROCKET_CLIENTLIST} )
+    ${LIBSRC_BASE} ${LIBSRC_ENGINE} ${LIBSRC_CLIENTBASE} ${LIBSRC_CLIENT} ${WIN_RC} ${ROCKET_CLIENTLIST} ${DUK_CLIENTLIST} )
   if( USE_SMP )
     set_property( TARGET client APPEND PROPERTY COMPILE_DEFINITIONS SMP )
   endif()
